# Hackathon_0_Personal_AI_Employee

./: .gitignore
AI_Employee_Vault/bronze/: .gitignore  CLAUDE.md  Company_Handbook.md  Dashboard.md  Plan.md  README.md  base_watcher.py  gmail_watcher.py  pyproject.toml  ralph_loop.sh
AI_Employee_Vault/bronze/.claude/: settings.json
AI_Employee_Vault/bronze/Done/: EMAIL_2026-02-24_Figma_Training_Master_class_193a7e34.md  EMAIL_2026-02-24_Personal_AI_Employee_Hackathon_0_Building_Aut_19c66583.md  EMAIL_2026-02-24_Test_Client_Invoice_Query_abc99001.md  EMAIL_2026-02-24_Test_Invoice_-_Project_Beta_19c8ebac.md
AI_Employee_Vault/bronze/Inbox/: DRAFT_REPLY_Invoice_Query_Project_Alpha_2026-02-24.md
AI_Employee_Vault/bronze/skills/: SKILL_Gmail_Triage.md  SKILL_Process_Needs_Action.md
AI_Employee_Vault/gold/: .env  .env.example  .gitignore  CLAUDE.md  Company_Handbook.md  DEMO_READY.md  Dashboard.md  Demo Video Recording Guide — Gold Tier Personal AI Employee.txt  ODOO_REVIEW_Invoice_Demo_Client_Ltd_2026-03-13.md  README.md  TESTING_GUIDE.md  audit_logger.py  base_watcher.py  credentials.json  facebook_watcher.py  linkedin_watcher.py  odoo_watcher.py  orchestrator.py  pyproject.toml  reset_demo.py  retry_handler.py  scheduler.py  token.json  twitter_watcher.py  whatsapp_watcher.py
AI_Employee_Vault/gold/.claude/: settings.json
AI_Employee_Vault/gold/.obsidian/: workspace.json
AI_Employee_Vault/gold/Accounting/: Current_Month.md  README.md
AI_Employee_Vault/gold/Archive/: BRIEFING_2026-04-12.md  BRIEFING_2026-04-12_archived_2026-04-12.md  BRIEFING_2026-04-13.md  BRIEFING_2026-04-13_archived_2026-04-13.md  BRIEFING_2026-04-13_archived_2026-04-14.md  BRIEFING_2026-04-14.md  DAILY_BRIEFING_2026-04-12.md  DRAFT_REPLY_2026-04-12_Invoice_Chase_INV-2026-010.md  DRAFT_REPLY_2026-04-12_Payment_Chase_INV-2026-010.md  DRAFT_REPLY_2026-04-12_Payment_Chase_INV-2026-010_Meridian.md  DRAFT_REPLY_2026-04-12_Q2_AI_Integration_Milestone_demo01.md  DRAFT_REPLY_2026-04-12_Q2_AI_Integration_Milestone_demo01_archived_2026-04-12.md  DRAFT_REPLY_2026-04-12_Q2_Milestone_demo01.md  DRAFT_REPLY_2026-04-13_Payment_Chase_INV-2026-010_Meridian.md  DRAFT_REPLY_2026-04-13_Payment_Chase_INV-2026-010_Meridian_archived_2026-04-13.md  DRAFT_REPLY_2026-04-13_Payment_Chase_INV-2026-010_Meridian_archived_2026-04-14.md  DRAFT_REPLY_2026-04-13_Q2_AI_Integration_Milestone_demo01.md  DRAFT_REPLY_2026-04-13_Q2_AI_Integration_Milestone_demo01_archived_2026-04-13.md  DRAFT_REPLY_2026-04-13_Q2_AI_Integration_Milestone_demo01_archived_2026-04-14.md  DRAFT_REPLY_2026-04-14_Invoice_Chase_INV-2026-010_Meridian.md  DRAFT_REPLY_2026-04-14_Q2_AI_Integration_Milestone_demo01.md  EMAIL_2026-04-10_AI_Project_Milestone_demo01.md  EMAIL_2026-04-10_AI_Project_Milestone_demo01_archived_2026-04-11.md  (+58 more)
AI_Employee_Vault/platinum/: .env.example  .gitignore  Business_Goals.md  CLOUD_CLAUDE.md  Company_Handbook.md  Dashboard.md  LOCAL_CLAUDE.md  README.md  audit_logger.py  base_watcher.py  cloud_orchestrator.py  email_sender.py  facebook_watcher.py  git_sync.py  gmail_watcher.py  health_monitor.py  linkedin_watcher.py  local_orchestrator.py  pyproject.toml  twitter_watcher.py  whatsapp_watcher.py
AI_Employee_Vault/silver/: .env  .env.example  .gitignore  .linkedin_session.json  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dashboard.md  MCP_VERIFICATION.md  Plan.md  README.md  SILVER_COMPLETION_REPORT.md  SILVER_TIER_REQUIREMENTS_ANALYSIS.md  _test_node.txt  _writer.js  _writer.py  credentials.json  gmail_watcher.py  orchestrator.py  package-lock.json  package.json  pyproject.toml  test_e2e.py
(+1140 files in other folders)
